# lib/db/src/schema/index.ts
@@ -1,3 +1,5 @@
 export * from "./jobs";
 export * from "./webhooks";
 export * from "./leads";
+export * from "./conversations";
+export * from "./messages";
